--- a/core/components/ckeditor/documents/changelog.txt
+++ b/core/components/ckeditor/documents/changelog.txt
@@ -1,10 +1,11 @@
 Changelog for CKEditor integration into MODx Revolution.
 
-CKEditor 1.4.7 (draft)
+CKEditor 1.4.7 (draft 2024.11.07)
 ====================================
 - Old HTML elements replaced to actual by default in new (and only new) pasted or typed content.
-- - <strong> replaced to <b> tag (thanks @dimasites)
-- - <em> replaced to <i> tag
+- • <strong> replaced to <b> tag (thanks @dimasites)
+- • <em> replaced to <i> tag
+- Improved MODX3 support: fixed search by pagetitle in "paste link" dialog
 
 CKEditor 1.4.6 (2024.07.03)
 ====================================
