--- a/core/components/ckeditor/documents/changelog.txt
+++ b/core/components/ckeditor/documents/changelog.txt
@@ -1,6 +1,6 @@
 Changelog for CKEditor integration into MODx Revolution.
 
-CKEditor 1.4.7 (draft 2024.11.07)
+CKEditor 1.4.7 (2025.03.21)
 ====================================
 - Old HTML elements replaced to actual by default in new (and only new) pasted or typed content.
 - • <strong> replaced to <b> tag (thanks @dimasites)
